# ComfyUI-NIX

./: NIX.json  NIX_Node.py  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
web/: nix_string_matcher_dynamic_inputs.js  nix_switch_anything_dynamic_inputs.js
